--- a/src/styles/experience.scss
+++ b/src/styles/experience.scss
@@ -1,4 +1,4 @@
-.skills-container {
+.experience-container {
   width: 80vw;
   margin-top: 10vh;
   display: flex;
@@ -9,7 +9,7 @@
     line-height: 20px;
   }
 
-  .skills-grid {
+  .experience-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     margin-top: 50px;
@@ -23,7 +23,7 @@
     @include media('>=tablet', '<desktop') {
       grid-template-columns: 1fr 1fr;
     }
-    .skill {
+    .experience {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -31,11 +31,12 @@
       img {
         height: 3.25rem;
       }
-      span {
-        margin-top: 10px;
-      }
       p {
         font-size: 15px;
+      }
+      .experienceDuration {
+        margin-top: 25px;
+        font-weight: bold;
       }
     }
   }
