--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -12,13 +12,13 @@
   h2 {
     font-size: 1.5rem;
     overflow: hidden;
-    @include media(">=phone", "<lgphone") {
+    @include media('>=phone', '<lgphone') {
       display: none;
     }
-    @include media(">=lgphone", "<tablet") {
+    @include media('>=lgphone', '<tablet') {
       font-size: 14px;
     }
-    @include media(">=tablet", "<desktop") {
+    @include media('>=tablet', '<desktop') {
       font-size: 1.2rem;
     }
   }
@@ -27,9 +27,9 @@
     color: black;
   }
   .social-icons {
-    margin-top: 20px;
+    margin-top: 15px;
     img {
-      height: 2rem;
+      height: 2.2rem;
       margin: 10px;
     }
   }
