--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,6 +1,6 @@
 .navbar-wrapper {
   width: 80vw;
-  margin-top: 10vh;
+  margin-top: 8vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -11,7 +11,7 @@
     button {
       text-decoration: none;
       padding: 10px;
-      font-family: "Open Sans";
+      font-family: 'Open Sans';
       opacity: 0.6;
       transition: all 0.2s ease-in-out;
       font-size: 12px;
