--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -5,14 +5,14 @@
   flex-direction: column;
   align-items: center;
   h1 {
-    font-size: 3rem;
-    line-height: 20px;
+    font-size: 3em;
+    line-height: 1.5em;
   }
 
   .skills-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    margin-top: 50px;
+    margin-top: 4vh;
     grid-gap: 20px;
     @include media('>=phone', '<lgphone') {
       grid-template-columns: 1fr;
@@ -35,7 +35,7 @@
         margin-top: 10px;
       }
       p {
-        font-size: 15px;
+        font-size: 1em;
       }
     }
   }
