--- a/src/styles/experience.scss
+++ b/src/styles/experience.scss
@@ -12,19 +12,21 @@
   .experience {
     margin-top: 3vh;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    @include media('>=phone', '<desktop') {
+      flex-direction: column;
+    }
     .experience-header {
-      // align-items: center;
-      // width: 25%;
-      align-items: center;
+      flex: 1;
       text-align: center;
+      padding: 2vh;
       img {
         max-height: 3.5rem;
         max-width: 12.5rem;
       }
       .company-name {
         margin: 2vh;
-        font-size: 1.15em;
+        font-size: 1.12em;
         font-weight: bold;
       }
       .experience-duration {
@@ -33,8 +35,10 @@
       }
     }
     .experience-paragraph {
+      flex: 2;
+      vertical-align: middle;
+      padding: 2vh;
       p {
-        margin: 3vh 0vh;
         font-size: 1em;
         text-align: justify;
       }
