--- a/src/styles/experience.scss
+++ b/src/styles/experience.scss
@@ -34,7 +34,7 @@
         margin: 0;
       }
     }
-    .experience-paragraph {
+    .experience-description {
       flex: 2;
       vertical-align: middle;
       padding: 2vh;
