Added an header to work as a brief summary about me

--- a/src/styles/mains.scss
+++ b/src/styles/mains.scss
@@ -4,6 +4,7 @@
 
 // Components
 @import './navbar.scss';
+@import './header.scss';
 @import './skills.scss';
 @import './experience.scss';
 @import './about.scss';
