--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,60 +1,24 @@
-.about-section {
+.about-container {
   width: 80vw;
   margin-top: 10vh;
   display: flex;
-  justify-content: space-between;
-
-  @include media('>=phone', '<lgphone') {
-    flex-direction: column-reverse;
-  }
-  @include media('>=lgphone', '<tablet') {
-    flex-direction: column-reverse;
-  }
-  @include media('>=tablet', '<desktop') {
-    flex-direction: column-reverse;
-    align-items: center;
+  flex-direction: column;
+  align-items: center;
+  h1 {
+    font-size: 3em;
+    line-height: 1.5em;
   }
 
   .content {
-    width: 50%;
-    @include media('>=phone', '<lgphone') {
-      width: 100%;
-    }
-    @include media('>=lgphone', '<tablet') {
-      width: 100%;
-    }
-    @include media('>=tablet', '<desktop') {
-      width: 100%;
-    }
-
-    h1 {
-      font-size: 3rem;
-      line-height: 20px;
-      @include media('>=tablet', '<desktop') {
-        text-align: center;
-      }
-    }
-    p {
-      @include media('>=tablet', '<desktop') {
-        text-align: center;
-      }
-    }
-  }
-
-  .image-wrapper {
-    width: 50%;
-    display: flex;
     align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    @include media('>=phone', '<lgphone') {
-      width: 100%;
-    }
-    @include media('>=lgphone', '<tablet') {
-      width: 100%;
-    }
-    @include media('>=tablet', '<desktop') {
-      width: 100%;
+    p {
+      width: 50vw;
+      font-size: 1em;
+      text-align: justify;
+      overflow: hidden;
+      @include media('>=phone', '<desktop') {
+        width: 80vw;
+      }
     }
   }
 }
