--- a/src/styles/experience.scss
+++ b/src/styles/experience.scss
@@ -25,13 +25,18 @@
         max-width: 12.5rem;
       }
       .company-name {
-        margin: 2vh;
-        font-size: 1.12em;
+        margin: 1.8vh;
+        font-size: 1.3em;
         font-weight: bold;
       }
+      .title-text {
+        margin-bottom: 0.6vh;
+        font-size: 1.1em;
+      }
       .experience-duration {
-        font-size: 0.9em;
+        font-size: 0.8em;
         margin: 0;
+        color: rgba(0, 0, 0, 0.75);
       }
     }
     .experience-description {
